[package]
name = "pbs_rsa"
version = "0.1.0"
edition = "2018"
authors = ["z <CSUwangj@protonmail.com>"]
description = "Pure Rust RSA partially blind signature implementation"
keywords = ["rsa", "signature", "security", "crypto", "blind"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
num-bigint-dig = { version = "0.6", features = ["rand", "i128", "u64_digit", "prime", "zeroize"] }
num-traits = "0.2.11"
num-integer = "0.1.42"
num-iter = "0.1.40"
lazy_static = "1.3.0"
rand = "0.7.3"
subtle = "2.0.0"
thiserror = "1.0.13"
rust-crypto = "^0.2"

[dependencies.zeroize]
version = "1.1.0"
features = ["alloc", "zeroize_derive"]

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0.89"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
base64 = "0.11.0"
sha-1 = "0.8.1"
sha2 = "0.8.0"
hex = "0.4.0"
serde_test = "1.0.89"
rand_xorshift = "0.2.0"
pem = "0.7"
bencher = "0.1.5"

[[bench]]
name = "sign"
bench = true
harness = false